--- a/.gitmodules
+++ b/.gitmodules
@@ -1,21 +1,21 @@
 [submodule "modules/gotrue-csharp"]
 	path = modules/gotrue-csharp
-	url = https://github.com/supabase-community/gotrue-csharp
+	url = https://github.com/BaLaLaLs/gotrue-csharp
 [submodule "modules/postgrest-csharp"]
 	path = modules/postgrest-csharp
-	url = https://github.com/supabase-community/postgrest-csharp
+	url = https://github.com/BaLaLaLs/postgrest-csharp
 [submodule "modules/realtime-csharp"]
 	path = modules/realtime-csharp
-	url = https://github.com/supabase-community/realtime-csharp
+	url = https://github.com/BaLaLaLs/realtime-csharp
 [submodule "modules/storage-csharp"]
 	path = modules/storage-csharp
-	url = https://github.com/supabase-community/storage-csharp
+	url = https://github.com/BaLaLaLs/storage-csharp
 [submodule "modules/functions-csharp"]
 	path = modules/functions-csharp
-	url = https://github.com/supabase-community/functions-csharp
+	url = https://github.com/BaLaLaLs/functions-csharp.git
 [submodule "modules/core-csharp"]
 	path = modules/core-csharp
-	url = git@github.com:supabase-community/core-csharp.git
-[submodule "Documentation"]
-	path = Documentation
-	url = git@github.com:supabase-community/supabase-csharp.wiki.git
+	url = https://github.com/BaLaLaLs/core-csharp.git
+; [submodule "Documentation"]
+; 	path = Documentation
+; 	url = git@github.com:supabase-community/supabase-csharp.wiki.git
